Se agregaron tarjetas para la visualización de información del guardia y se agrego el historial al rut

--- a/frontend/src/styles/bicicleta.css
+++ b/frontend/src/styles/bicicleta.css
@@ -60,7 +60,7 @@
     font-weight: 600;
 }
 
-.bicicleta-table .status.enuso {
+.bicicleta-table .status.ingresada {
     background-color: #4caf50;
     color: white;
 }
